<resources>
    <string name="app_name">App-description-apiary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_cpf">Digite seu cpf:</string>
    <string name="text_password">Digite sua senha:</string>
    <string name="text_title_login">LOGIN</string>
    <string name="text_button_enter">Entrar</string>
    <string name="text_forgot_password">Esqueci a senha</string>
    <string name="text_email">Digite seu email:</string>
    <string name="name_person">Joao Victor</string>
    <string name="text_job">Job</string>
    <string name="enviar_email">Enviar email</string>
    <string name="message_error_cpf_invalid">É necessário digitar um CPF válido</string>
    <string name="message_success_forgot_password">Senha atualizada com sucesso</string>
    <string name="message_error">Mensagem de erro</string>
    <string name="error_fetching_information">Erro ao buscar informações , por favor cheque sua internet</string>
    <string name="message_error_password">Por favor , digite sua senha.</string>
    <string name="message_error_servidor">Erro ao buscar resposta no servidor, por favor verifique sua internet.</string>
    <string name="message_error_email">Por favor, digite um email válido.</string>
    <string name="error_not_connection">É necessário estar conectado a internet para realizar esta ação</string>
    <string name="seja_bem_vindo">Seja bem vindo</string>
    <string name="title_alert_message">Aviso!</string>
    <string name="message_back_login">Deseja voltar a tela de login?</string>
    <string name="back_positive_message">Sim</string>
    <string name="text_cancel_action">Não</string>
    <string name="message_ok">Ok</string>
    <string name="message_error_autentication">Erro na autenticação.</string>
    <string name="message_success_autentication_device">Autenticação disponível.</string>
    <string name="message_error_device_autentication">Autenticação indisponível.</string>
    <string name="message_error_resgister_device">Nenhuma autenticação resgistrada.</string>
    <string name="message_error_hardware_device">Seu dispositivo não suporta essa ação.</string>
    <string name="message_title_biometric">Biometria</string>
    <string name="message_description_biometric_dialog">Use suas credenciais para entrar no aplicativo</string>
    <string name="message_enter_login_password_not_save">Digitar login e senha.</string>
    <string name="message_title_screen_registration">Cadastro</string>
    <string name="text_name_et">Insira seu nome de usuário:</string>
    <string name="text_surname_et">Insira seu sobrenome:</string>
    <string name="et_date_of_birth">Insira sua data de nascimento:</string>
    <string name="text_state_et">Insira seu estado:</string>
    <string name="text_user_perfil">Perfil</string>
    <string name="name_of_user">Nome do usuário</string>
    <string name="title_surname">Sobrenome</string>
    <string name="tv_birth">Data de nascimento</string>
    <string name="titlw_state">Estado onde reside</string>
    <string name="text_btn_register">CADASTRAR</string>
    <string name="message_register_ok">Usúario registrado com sucesso.</string>
    <string name="text_btn_submit">Enviar</string>
    <string name="message_register_name">Por favor, digite um nome válido.</string>
    <string name="message_register_last_name">Por favor, digite um sobrenome válido.</string>
    <string name="message_strings_equals">Nome e sobrenome iguais.Por favor , digite dados válidos.</string>
    <string name="message_date_null">Por favor , digite sua data de nascimento.</string>
    <string name="message_date_invalid">Sua data de nascimento não pode ser a data de hoje.</string>
    <string name="message_date_birth_minor">Infelizmente você não possui os requisitos para usar o aplicativo.Usuário menor de 18 anos.</string>
    <string name="message_state_empty">Digite um estado válido</string>
    <string name="fields_empty">Preencha os campos para se cadastrar.</string>
    <string name="message_error_empty">A data de nascimento não pode estar vazia.</string>
    <string name="message_error_date_of_birth_invalid">A data de nascimento deve ser válida.</string>
    <string name="message_error_date_future">Data inválida.</string>
    <string name="message_error_minor">É necessário ter pelo menos 18 anos para completar o seu registro.</string>
    <string name="text_description_image">Imagem de biometria para logar no aplicativo</string>
    <string name="text_register_new_user">Ainda não tem uma conta? <font fgcolor ='#ED07C5'> \nRegistre-se aqui.</font> </string>
    <string name="message_sppiner_not_selected">Nenhuma opção selecionada</string>
    <string name="message_spinner_selected">Spinner selecionado</string>
    <string name="text_switch_perfil_on">On</string>
    <string name="text_perfil_off">Off</string>
    <string name="text_perfil_activity">Toque na chave para ativar seu perfil</string>
    <string name="message_off_profile">Toque para desativar o perfil</string>
    <string name="message_on_profile">Toque para ativar seu perfil.</string>
    <string name="status_profile_text">Status perfil</string>
</resources>