<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_toolbar_login"
            android:layout_width="0dp"
            android:layout_height="?android:attr/actionBarSize"
            android:background="#84ffff"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/myCradView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginVertical="30dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_toolbar_login">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/text_title_login"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_cpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/text_cpf"
                    android:inputType="number"
                    android:padding="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_login" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/text_password"
                    android:inputType="number"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/et_cpf" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/button_enter_shape"
            android:text="@string/text_button_enter"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintLeft_toLeftOf="@id/myCradView"
            app:layout_constraintRight_toRightOf="@id/myCradView"
            app:layout_constraintTop_toBottomOf="@id/myCradView" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/text_forgot_password"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_enter" />

        <ProgressBar
            android:id="@+id/pb_load"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forget_password"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_message_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#F44336"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/pb_load"
            tools:hint="@string/message_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>